add fields restriction

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -218,6 +218,7 @@ en:
         state: "Статус заявки"
         old_manager: "Менеджер клиента"
         manager: "Новый менеджер клиента"
+        info: "Дополнительная информация"
   save: "Save"
   new_req: "Новая заявка"
   curr_user: "Текущее назначение заявки"
