add clients model and client_id field to reqs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -222,6 +222,8 @@ en:
         old_manager: "Старый менеджер"
         manager: "Новый менеджер"
         info: "Дополнительная информация"
+        client_id: "Клиент"
+        user_id: "Текущий пользователь"
   save: "Save"
   new_req: "Новая заявка"
   curr_user: "Текущее назначение"
