fix forms, need to fix reassign_client

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -219,8 +219,8 @@ en:
         inn: "ИНН клиента"
         money: "Доход с клиента*"
         state: "Статус"
-        old_manager: "Старый менеджер"
-        manager: "Новый менеджер"
+        old_manager_id: "Старый менеджер"
+        new_manager_id: "Новый менеджер"
         info: "Дополнительная информация"
         client_id: "Клиент"
         user_id: "Текущий пользователь"
