--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -223,7 +223,7 @@ en:
         new_manager_id: "Новый менеджер"
         info: "Дополнительная информация"
         client_id: "Клиент"
-        user_id: "Текущий пользователь"
+        user_id: "Последний пользователь"
   save: "Save"
   new_req: "Новая заявка"
   curr_user: "Текущее назначение"
