finish req_purchase views and controllers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -224,6 +224,12 @@ en:
         info: "Дополнительная информация"
         client_id: "Клиент"
         user_id: "Последний пользователь"
+      req_purchase:
+        id: "Номер"
+        state: "Статус"
+        name: "Закупка"
+        money: "Стоимость"
+        last_user_id: "Последний пользователь"
   save: "Save"
   new_req: "Новая заявка"
   curr_user: "Текущее назначение"
