list of assignments different types

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -230,6 +230,11 @@ en:
         name: "Закупка"
         money: "Стоимость"
         last_user_id: "Последний пользователь"
+      assignment:
+        id: "Номер задачи"
+        user_id: "Исполнитель"
+        description: "Описание задания"
+        closed: "Закрыто?"
   save: "Save"
   new_req: "Новая заявка"
   curr_user: "Текущее назначение"
