--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -235,8 +235,15 @@ en:
         user_id: "Исполнитель"
         description: "Описание задания"
         closed: "Закрыто"
+      history:
+        created_at: "Дата изменений"
+        user_id: "Пользователь"
+        state: "Статус"
+        description: "Описание изменений"
+        new_values: "Новые значения"
   save: "Save"
   new_req: "Новая заявка"
   curr_user: "Текущее назначение"
   home_link: "На главную"
   ReqReassign: "Перезакрепление"
+  changed_state_to: " изменил статус на "
