finish nested form

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -288,7 +288,7 @@ ru:
           id: "Номер"
           req_workgroup_id: "Номер рабочей группы"
           user_id: "ФИО участника"
-          main: "Признак руководителя"
+          main: "Руководитель"
           comment: "Комментарий"
           updated_at: "Дата последнего изменения" 
         assignment:
