add workgroup one leader validation

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -144,6 +144,7 @@ ru:
         odd: может иметь лишь четное значение
         record_invalid: ! 'Возникли ошибки: %{errors}'
         taken: уже существует
+        validate_one_leader: у рабочей группы может быть только один руководитель
         too_long:
           few: слишком большой длины (не может быть больше чем %{count} символа)
           many: слишком большой длины (не может быть больше чем %{count} символов)
@@ -308,3 +309,5 @@ ru:
     home_link: "На главную"
     ReqReassign: "Перезакрепление"
     changed_state_to: " изменил статус на "
+    should_be_only_one_leader: "Должен быть только один руководитель рабочей группы"
+    req_updated_successfuly: "Запись успешно обновлена"
