--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -145,6 +145,7 @@ ru:
         record_invalid: ! 'Возникли ошибки: %{errors}'
         taken: уже существует
         validate_one_leader: у рабочей группы может быть только один руководитель
+        extension_white_list_error: расширение файла должно быть pdf, doc или docx
         too_long:
           few: слишком большой длины (не может быть больше чем %{count} символа)
           many: слишком большой длины (не может быть больше чем %{count} символов)
@@ -279,6 +280,7 @@ ru:
           money: "Стоимость"
           last_user_id: "Последний пользователь"
           myfile: "Файл"
+          remove_myfile: "Удалить файл"
         req_workgroup:
           id: "Номер"
           state: "Статус"
