--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -261,8 +261,14 @@ ru:
         user:
           remember_me: "Запомнить меня"
           name: "ФИО"
+          email: "Email"
           password: "Пароль"
           password_confirmation: "Пароль еще раз"
+          code: "Код пользователя"
+          unit_id: "Подразделение"
+          unit_code: "Код подразделения"
+          deleted: "Удален"
+          admin: "Администратор"
         req_reassign:
           id: "Номер"
           name: "Описание"         
@@ -314,3 +320,4 @@ ru:
     changed_state_to: " изменил статус на "
     should_be_only_one_leader: "Должен быть только один руководитель рабочей группы"
     req_updated_successfuly: "Запись успешно обновлена"
+    updated_successfuly: "Успешно обновлено"
