--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -309,7 +309,7 @@ ru:
           comment: "Комментарий"
           updated_at: "Дата последнего изменения" 
         assignment:
-          id: "Номер задачи"
+          id: "Номер задания"
           user_id: "Исполнитель"
           description: "Описание задания"
           closed: "Закрыто"
